--- a/WeatherApp/WeatherApp/Views/MainView.xaml
+++ b/WeatherApp/WeatherApp/Views/MainView.xaml
@@ -5,7 +5,9 @@
     <ContentPage.Content>
         <StackLayout VerticalOptions="Center">
             <Label Text="{Binding Title}"
-                   HorizontalOptions="Center"/>
+                   HorizontalOptions="Center"
+                   FontSize="Large"
+                   TextColor="Black"/>
 
 
             <ListView VerticalOptions="Fill"
