--- a/WeatherApp/WeatherApp/Views/WeekView.xaml
+++ b/WeatherApp/WeatherApp/Views/WeekView.xaml
@@ -10,12 +10,36 @@
                 <ColumnDefinition Width="*"/>
                 <ColumnDefinition Width="40"/>
             </Grid.ColumnDefinitions>
-            <StackLayout Grid.Column="1">
+            <StackLayout Grid.Column="1" HorizontalOptions="Fill">
                 <Label Text="Conect to Darksky - this week news"
                        FontSize="Medium"/>
                 <Label Text="{Binding CityNameText}"
                        FontSize="Medium"
-                       HorizontalOptions="Center"></Label>
+                       HorizontalOptions="Center"/>
+                <Grid BackgroundColor="Black" HeightRequest="40">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="*"/>
+                        <ColumnDefinition Width="*"/>
+                        <ColumnDefinition Width="*"/>
+                        <ColumnDefinition Width="*"/>
+                        <ColumnDefinition Width="*"/>
+                        <ColumnDefinition Width="*"/>
+                        <ColumnDefinition Width="*"/>
+                    </Grid.ColumnDefinitions>
+                    <!--<Grid.Resources>
+                        <Style TargetType ="Label">
+                            <Setter Property="TextColor" Value="Yellow"/>
+                        </Style>
+                    </Grid.Resources>-->
+
+                    <Label Text="Day" TextColor="Yellow" Grid.Column="0"/>
+                    <Label Text="Low Temperature" TextColor="Yellow" Grid.Column="1"/>
+                    <Label Text="High Temperature" TextColor="Yellow" Grid.Column="2"/>
+                    <Label Text="Wind Speed" TextColor="Yellow" Grid.Column="3"/>
+                    <Label Text="Icon" TextColor="Yellow" Grid.Column="4"/>
+                    <Label Text="%Humidity" TextColor="Yellow" Grid.Column="5"/>
+                    <Label Text="Summery" TextColor="Yellow" Grid.Column="6"/>
+                </Grid>
                 <!--<TableView>
                 <TableView.Root>
                     <TableSection Title="Test">
@@ -42,13 +66,6 @@
                 </TableView.Root>
             </TableView>-->
 
-                <!--<Grid.RowDefinitions>
-                    <RowDefinition Height="*"/>
-                    <RowDefinition Height="*"/>
-                    <RowDefinition Height="*"/>
-                    <RowDefinition Height="*"/>
-                    <RowDefinition Height="Auto"/>
-                </Grid.RowDefinitions>-->
                 <StackLayout>
                     <Label Text="{Binding DayOfWeek}" TextColor="White"/>
                     <ListView BackgroundColor="White"     
@@ -58,12 +75,50 @@
                         <ListView.ItemTemplate>
                             <DataTemplate>
                                 <ViewCell>
-                                    <StackLayout Orientation="Horizontal" BackgroundColor="Black" Padding="20" Margin="2">
-                                        <StackLayout>
-                                            <Label Text="Day" TextColor="Yellow" />
-                                            <Label Text="{Binding NameOfDay}" TextColor="White"/>
-                                        </StackLayout>
-                                        <!--<Grid>
+                                    <Grid BackgroundColor="Yellow" >
+                                        <Grid BackgroundColor="Black" Padding="20"  Margin="3">
+                                            <Grid.ColumnDefinitions>
+                                                <ColumnDefinition Width="*"/>
+                                                <ColumnDefinition Width="*"/>
+                                                <ColumnDefinition Width="*"/>
+                                                <ColumnDefinition Width="*"/>
+                                                <ColumnDefinition Width="*"/>
+                                                <ColumnDefinition Width="*"/>
+                                                <ColumnDefinition Width="*"/>
+                                            </Grid.ColumnDefinitions>
+
+                                            <StackLayout Grid.Column="0" Margin="5">
+                                                <Label Text="{Binding NameOfDay}" TextColor="White"/>
+                                            </StackLayout>
+                                            <StackLayout  Grid.Column="1">
+                                                <Label Text="{Binding TemperatureLow}" TextColor="White" />
+                                            </StackLayout>
+                                            <StackLayout  Grid.Column="2">
+                                                <Label Text="{Binding TemperatureHigh}" TextColor="White"/>
+                                            </StackLayout>
+                                            <StackLayout  Grid.Column="3">
+                                                <Label Text="{Binding WindSpeed}" TextColor="White"/>
+                                            </StackLayout>
+                                            <StackLayout  Grid.Column="4">
+                                                <Label Text="{Binding Icon}" TextColor="Yellow"/>
+                                                <Image Source="https://cdn4.iconfinder.com/data/icons/round-buttons/512/black_cloud.png"
+                                                       HeightRequest="50"
+                                                       WidthRequest="50"></Image>
+                                            </StackLayout>
+                                            <StackLayout  Grid.Column="5">
+                                                <Label Text="{Binding Humidity}" TextColor="White"/>
+                                            </StackLayout>
+
+                                            <StackLayout  Grid.Column="6">
+                                                <Label Text="{Binding Summary}" TextColor="White"/>
+                                            </StackLayout>
+
+                                        </Grid>
+                                    </Grid>
+                                    <!--<StackLayout Orientation="Horizontal" BackgroundColor="Black" Padding="20" Margin="2">
+
+                                        -->
+                                    <!--<Grid>
                                             <Grid.RowDefinitions>
                                                 <RowDefinition Height="7*" />
                                                 <RowDefinition Height="3*"/>
@@ -72,33 +127,10 @@
                                             <Label Grid.Row="1" VerticalOptions="Fill" Text="{Binding NameOfDay}" TextColor="White"></Label>
                                            
                                         </Grid>-->
-                                        <StackLayout Orientation="Vertical">
-                                            <Label Text="Low Temperature" TextColor="Yellow"/>
-                                            <Label Text="{Binding TemperatureLow}" TextColor="White" />
-                                        </StackLayout>
-                                        <StackLayout>
-                                            <Label Text="High Temperature" TextColor="Yellow"/>
-                                            <Label Text="{Binding TemperatureHigh}" TextColor="White"/>
-                                        </StackLayout>
-                                        <StackLayout>
-                                            <Label Text="Wind Speed" TextColor="Yellow"/>
-                                            <Label Text="{Binding WindSpeed}" TextColor="White"/>
-                                        </StackLayout>
-                                        <StackLayout>
-                                            <Label Text="{Binding Icon}" TextColor="Yellow"/>
-                                            <Image Source="D:\Documents\Visual Studio 2017\Xamarin\WeatherApp\WeatherApp\WeatherApp\WeatherApp\Images\partlyCloudy.jpg"></Image>
-                                        </StackLayout>
-                                        <StackLayout>
-                                            <Label Text="%Humidity" TextColor="Yellow"/>
-                                            <Label Text="{Binding Humidity}" TextColor="White"/>
-                                        </StackLayout>
+                                    <!--
 
-                                        <StackLayout>
-                                            <Label Text="Summery" TextColor="Yellow"/>
-                                            <Label Text="{Binding Summary}" TextColor="White"/>
-                                        </StackLayout>
 
-                                    </StackLayout>
+                                    </StackLayout>-->
                                 </ViewCell>
                             </DataTemplate>
                         </ListView.ItemTemplate>
